--- a/style.scss
+++ b/style.scss
@@ -260,7 +260,19 @@ a{
         justify-content: center;
         align-items: center;
         background-color: rgba(255,255,255,.8);
-    }&__navButton{
+    }&__navButton1{
+        width: 20px;
+        height: 20px;
+        border: rgba(0,0,0,.3) solid 2px;
+        border-radius: 100%;
+        margin: 10px;
+    }&__navButton2{
+        width: 20px;
+        height: 20px;
+        border: rgba(0,0,0,.3) solid 2px;
+        border-radius: 100%;
+        margin: 10px;
+    }&__navButton3{
         width: 20px;
         height: 20px;
         border: rgba(0,0,0,.3) solid 2px;
