--- a/style/sidebar.scss
+++ b/style/sidebar.scss
@@ -77,3 +77,13 @@
 .sideBar__icon--unactive{
     opacity: 0;
 }
+
+@media(min-width: 900px){
+    .sideBar{ 
+        display: none;
+    }.sideBarMenu{
+        display: none;
+    }.darkArea{
+        display: none;
+    }
+}
