--- a/style/style.scss
+++ b/style/style.scss
@@ -27,112 +27,17 @@ a{
 
 // ~~~~~~~~~~~~~SECOND SCREEN~~~~~~~~~~~~~
 
-.secondScreen{
-    height: 100vh;
-    background-image: url(img/BackgroundPhoneImg/secondScreenBg-pexels-jayant-kulkarni.jpg);
-    background-size: 100% 100%;        background-size: cover;
-    background-position: right center;        background-repeat: no-repeat;  
-    
-    display: grid;
-    grid-template-columns: 10% 80% 10%;
-    grid-template-rows: 5% 75% 20%;
-}
 
-.about{
-    height: 100%;
-    width: 100%;
-    grid-column: 2/3;
-    grid-row: 2/3;
-    text-align: center;
-    &__title{
-        width: 100%;
-        font-size: 1.8rem;
-        margin: 20px 0 0 0;
-    }&__text{
-        margin: 20px 0 0 0;
-        font-size: 1.15rem;
-    }
-}
 
 
 // ~~~~~~~~~~~~~THIRD SCREEN~~~~~~~~~~~~~
 
-.thirdScreen{
-    height: 100vh;
-    background-image: url(img/BackgroundPhoneImg/thirdScreenBg-pexels-olga.jpg);
-    background-size: 100% 100%;        background-size: cover;
-    background-position: left center;        background-repeat: no-repeat; 
-    
-    display: grid;
-    grid-template-columns: 10% 80% 10%;
-    grid-template-rows: 15% 35% 50%;
-}
 
-
-
-.products{
-    height: 100%;
-    width: 100%;
-    grid-column: 2/3;
-    grid-row: 2/3;
-}
-.slide{
-    display: flex;
-    flex-direction: column;
-    &__titlePhoto{
-        width: 90%;
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-end;
-    }&__photo{
-        height: 50px;
-        width: 50px;
-    }&__title{
-        font-size: 2rem;
-        text-align: left;
-    }&__titleContinue{
-        font-size: 1.2rem;
-        display: block;
-    }&__text{
-        margin: 30px auto 0 auto;
-        text-align: center;
-        width: 80%;
-    }
-}
-
-.productsBar{
-    &__list{
-        background-color: rgba(0,0,0,.3);
-        border-radius: 0 20px 20px 0;
-        height: 70px;
-        width: 300px;   
-        position: relative;
-        top: 450px;
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        transform: translateX(-240px);
-        transition: transform .5s ease-in-out;
-    }&__items{
-
-    }&__img{
-        width: 50px;
-        height: 50px;
-    }&__button{
-        height: 25px;
-        width: 15px;
-        background-color: black;
-    }
-}
-
-.productsBar__list--active{
-    transform: translateX(0px);
-}
 // ~~~~~~~~~~~~~FOURTH  SCREEN~~~~~~~~~~~~~
 
 .fourthScreen{
     height: 100vh;
-    background-image: url(img/BackgroundPhoneImg/fourthScreenBgPhone-pexels-scott.jpg);
+    background-image: url(../img/BackgroundPhoneImg/fourthScreenBgPhone-pexels-scott.jpg);
     background-size: 100% 100%;        background-size: cover;
     background-position: right center;        background-repeat: no-repeat; 
     
