--- a/css/fontello-codes.css
+++ b/css/fontello-codes.css
@@ -1,4 +1,5 @@
 
+.icon-right-open:before { content: '\e800'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
