--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?80774260');
-  src: url('../font/fontello.eot?80774260#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?80774260') format('woff2'),
-       url('../font/fontello.woff?80774260') format('woff'),
-       url('../font/fontello.ttf?80774260') format('truetype'),
-       url('../font/fontello.svg?80774260#fontello') format('svg');
+  src: url('../font/fontello.eot?43794621');
+  src: url('../font/fontello.eot?43794621#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?43794621') format('woff2'),
+       url('../font/fontello.woff?43794621') format('woff'),
+       url('../font/fontello.ttf?43794621') format('truetype'),
+       url('../font/fontello.svg?43794621#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?80774260#fontello') format('svg');
+    src: url('../font/fontello.svg?43794621#fontello') format('svg');
   }
 }
 */
@@ -55,6 +55,7 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
+.icon-right-open:before { content: '\e800'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
