--- a/style/style.css
+++ b/style/style.css
@@ -22,168 +22,16 @@ li {
   }
 }
 
-.fourthScreen {
-  height: 100vh;
-  background-image: url(../img/BackgroundPhoneImg/fourthScreenBgPhone-pexels-scott.jpg);
-  background-size: 100% 100%;
-  background-size: cover;
-  background-position: right center;
-  background-repeat: no-repeat;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 10% 80% 10%;
-      grid-template-columns: 10% 80% 10%;
-  -ms-grid-rows: 10% 50% 40%;
-      grid-template-rows: 10% 50% 40%;
+::-webkit-scrollbar {
+  width: 10px;
 }
 
-.promotions {
-  height: 100%;
-  width: 100%;
-  background-color: rgba(255, 255, 255, 0.7);
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  grid-row: 2/3;
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+::-webkit-scrollbar-track {
+  background: rgba(241, 241, 241, 0.1);
 }
 
-.promotions__container {
-  width: 70%;
-  text-align: center;
-  margin: 0 0 70px 0;
-}
-
-.promotions__title {
-  font-size: 2rem;
-  margin: 5% 0 5% 0;
-  font-weight: normal;
-}
-
-.promotions__text {
-  width: 80%;
-}
-
-.promotions__button {
-  padding: 7px 40px;
-  margin: 10% 0 5% 0;
-  border: none;
-  background-color: rgba(69, 155, 82, 0.7);
-  color: white;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 4px 4px 10px;
-          box-shadow: rgba(0, 0, 0, 0.3) 4px 4px 10px;
-}
-
-.promotions__card {
-  position: absolute;
-  bottom: -50%;
-  left: 15%;
-  height: 70%;
-  width: 70%;
-  background-color: rgba(69, 155, 82, 0.7);
-}
-
-.promotions__iconsContainer {
-  height: 70%;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.promotions__4icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.promotions__icon {
-  width: 50px;
-  height: 50px;
-  margin: 12px;
-}
-
-.promotions__nav {
-  height: 30%;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: rgba(255, 255, 255, 0.8);
-}
-
-.promotions__navButton1 {
-  width: 20px;
-  height: 20px;
-  border: rgba(0, 0, 0, 0.3) solid 2px;
-  border-radius: 100%;
-  margin: 10px;
-}
-
-.promotions__navButton2 {
-  width: 20px;
-  height: 20px;
-  border: rgba(0, 0, 0, 0.3) solid 2px;
-  border-radius: 100%;
-  margin: 10px;
-}
-
-.promotions__navButton3 {
-  width: 20px;
-  height: 20px;
-  border: rgba(0, 0, 0, 0.3) solid 2px;
-  border-radius: 100%;
-  margin: 10px;
-}
-
-.promoSlider__iconsContainer--professional {
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.promoSlider__icons {
-  height: 50px;
-  width: 50px;
-  margin: 5px;
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(136, 136, 136, 0.7);
 }
 /*# sourceMappingURL=style.css.map */
