--- a/style/style.scss
+++ b/style/style.scss
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
 }
 $fontColor: black;
 $secondFontColor: white;
@@ -17,6 +18,8 @@ a{
         font-size: 13px;
     }
 }
+
+
 
 
 // ~~~~~~~~~~~~~FIRST SCREEN~~~~~~~~~~~~~
