--- a/style/firsScreen.css
+++ b/style/firsScreen.css
@@ -1,4 +1,5 @@
 .firstScreen {
+  position: relative;
   height: 100vh;
   background-image: url(../img/BackgroundPhoneImg/firstScreenBgPhone-pexels-tetyana.jpg);
   background-size: 100% 100%;
@@ -74,6 +75,7 @@
   border: none;
   color: white;
   background-color: rgba(0, 0, 0, 0.7);
+  cursor: pointer;
 }
 
 .topBar {
