--- a/style/firsScreen.scss
+++ b/style/firsScreen.scss
@@ -1,5 +1,6 @@
 
 .firstScreen{
+    position: relative;
     height: 100vh;
     background-image: url(../img/BackgroundPhoneImg/firstScreenBgPhone-pexels-tetyana.jpg);
     background-size: 100% 100%;        background-size: cover;
@@ -48,6 +49,7 @@
         border: none;
         color: white;
         background-color: rgba(0,0,0,.7);
+        cursor: pointer;
     }
 }
 
