--- a/style/fourthScreen.css
+++ b/style/fourthScreen.css
@@ -1,4 +1,5 @@
 .fourthScreen {
+  position: relative;
   height: 100vh;
   background-image: url(../img/BackgroundPhoneImg/fourthScreenBgPhone-pexels-scott.jpg);
   background-size: 100% 100%;
@@ -57,6 +58,7 @@
   border: none;
   background-color: rgba(69, 155, 82, 0.7);
   color: white;
+  cursor: pointer;
   -webkit-box-shadow: rgba(0, 0, 0, 0.5) 3px 3px 10px;
           box-shadow: rgba(0, 0, 0, 0.5) 3px 3px 10px;
 }
@@ -127,6 +129,7 @@
   border: rgba(0, 0, 0, 0.3) solid 2px;
   border-radius: 100%;
   margin: 10px;
+  cursor: pointer;
 }
 
 .promotions__navButton2 {
@@ -135,6 +138,7 @@
   border: rgba(0, 0, 0, 0.3) solid 2px;
   border-radius: 100%;
   margin: 10px;
+  cursor: pointer;
 }
 
 .promotions__navButton3 {
@@ -143,6 +147,7 @@
   border: rgba(0, 0, 0, 0.3) solid 2px;
   border-radius: 100%;
   margin: 10px;
+  cursor: pointer;
 }
 
 .promoSlider__iconsContainer--professional {
