--- a/style/thirdScreen.scss
+++ b/style/thirdScreen.scss
@@ -1,4 +1,5 @@
 .thirdScreen{
+    position: relative;
     height: 100vh;
     background-image: url(../img/BackgroundPhoneImg/thirdScreenBg-pexels-olga.jpg);
     background-size: 100% 100%;        background-size: cover;
@@ -61,6 +62,7 @@
     }&__icons{
         width: 50px;
         height: 50px;
+        cursor: pointer;
     }&__button{
         height: 25px;
         width: 15px;
