--- a/style/secondScreen.css
+++ b/style/secondScreen.css
@@ -67,7 +67,7 @@
     margin: 10px 0 0 0;
   }
   .navBtn--white {
-    color: #fff;
+    color: white;
   }
 }
 /*# sourceMappingURL=secondScreen.css.map */
