--- a/style/styles.css
+++ b/style/styles.css
@@ -35,4 +35,4 @@ li {
 ::-webkit-scrollbar-thumb {
   background: rgba(136, 136, 136, 0.7);
 }
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=otherStyles.css.map */
