--- a/style/secondScreen.scss
+++ b/style/secondScreen.scss
@@ -1,3 +1,4 @@
+@import "./_var&colors";
 .secondScreen{
     position: relative;
     height: 100vh;
@@ -52,6 +53,6 @@
         }
     }
     .navBtn--white{
-        color: #fff;
+        color: $secondFontColor;
     }
 }
